2010-08-29  Murray Cumming  <murrayc@murrayc.com>

	Regenerated function .defs files.

	* gdk/src/gdk_methods.defs:
	* gtk/src/gtk_methods.defs: Regenerated.

2010-08-29  Murray Cumming  <murrayc@murrayc.com>

	Gdk: RgbCMap: Deprecate.

	* gdk/src/rgbcmap.[hg|ccg]: Deprecate this because it is deprecated in 
	GTK+. This fixes the build with fatal warnings.

2010-08-04  Armin Burgmeier  <armin@arbur.net>

	Add missing include paths to MSVC property sheets.

	* win32_installer/gtkmm-vc80-2_4.vsprops:
	* win32_installer/gtkmm-vc80-d-2_4.vsprops:
	* win32_installer/gtkmm-vc90-2_4.vsprops:
	* win32_installer/gtkmm-vc90-d-2_4.vsprops: Add lib/pangomm-1.4/include
	and include/freetype2 to inculde paths.

	* win32_installer/install-msvc-module: Update for gtkmm 2.20.3.

2010-08-04  Armin Burgmeier  <armin@arbur.net>

	Fixed using stock items with MSVC. Bug #625489.

	* gtk/gtkmmconfig.h.in: Make sure we define GTKMM_API to
	__declspec(dllimport) also with MSVC when building gtkmm.


2010-07-16  Murray Cumming  <murrayc@murrayc.com>

	Fix build errors when deprecated API is disabled.

	* gtk/src/notebook.[hg|ccg]:
	* gtk/src/table.hg: Remove the ifdefs from the PagesList and TableList class 
	declarations because we must keep the un-ifdefed member variable to preserve 
	ABI.

2010-07-14  Murray Cumming  <murrayc@murrayc.com>

	Deprecate Notebook::pages() and Table::children().

	* gtk/src/notebook.[hg|ccg]:
	* gtk/src/table.[hg|ccg]: Deprecate the STL-style accessors.

2.21.5:

2010-07-14  Murray Cumming  <murrayc@murrayc.com>

    Rearrange includes in tests and demos for the undefs.

	* demos/gtk-demo/demowindow.cc:
	* demos/gtk-demo/demowindow.h:
	* demos/gtk-demo/main.cc:
	* tests/child_widget/main.cc: These now build again with
    enable-warnings=fatal .

2010-07-14  Murray Cumming  <murrayc@murrayc.com>

	More rearranging of includes for the undef in gdkmm/region.hg.

	* gtk/gtkmm/menu_elems.[h|cc]:
	* gtk/gtkmm/stock.[h|cc]:
	* gtk/src/bin.[hg|ccg]: