@@ -54,6 +54,8 @@ public:
 
   _WRAP_METHOD(Glib::RefPtr<Gdk::Pixbuf> get_image(), gdk_cursor_get_image)
   _WRAP_METHOD(Glib::RefPtr<const Gdk::Pixbuf> get_image() const, gdk_cursor_get_image, constversion)
+  
+  _WRAP_METHOD(CursorType get_cursor_type() const, gdk_cursor_get_cursor_type)
 };
 
 } //namespace Gdk
