@@ -19,6 +19,8 @@
  */
 
 #include <gdk/gdk.h>
+#include <gdkmm/cursor.h>
+#include <gdkmm/display.h>
 
 namespace Gdk
 {
