@@ -20,6 +20,8 @@
 #include <gdkmm/window.h>
 #include <gdkmm/event.h>
 
+//#include <gdkmm/display.h>
+#include <gdk/gdk.h>
 
 _DEFS(gdkmm,gdk)
 _PINCLUDE(glibmm/private/object_p.h)
@@ -30,6 +32,8 @@ namespace Gdk
 
 _WRAP_ENUM(InputMode, GdkInputMode)
 _WRAP_ENUM(InputSource, GdkInputSource)
+
+class Display;
 
 /** A Gdk::Device instance contains a detailed description of an extended input device.
  */
@@ -44,7 +48,9 @@ public:
 
   _WRAP_METHOD(void set_source(InputSource source), gdk_device_set_source)
   _WRAP_METHOD(bool set_mode(InputMode mode), gdk_device_set_mode)
+  _WRAP_METHOD(void get_key(guint index_, guint& keyval, ModifierType& modifiers) const, gdk_device_get_key)
   _WRAP_METHOD(void set_key(guint index_, guint keyval, ModifierType modifiers), gdk_device_set_key)
+  _WRAP_METHOD(AxisUse get_axis_use(guint index_) const, gdk_device_get_axis_use)
   _WRAP_METHOD(void set_axis_use(guint index_, AxisUse use), gdk_device_set_axis_use)
   _WRAP_METHOD(void get_state(const Glib::RefPtr<Window>& window, double& axes, ModifierType& mask), gdk_device_get_state)
   _WRAP_METHOD(bool get_history(const Glib::RefPtr<Window>& window, guint32 start, guint32 stop, GdkTimeCoord**& events, int& n_events), gdk_device_get_history)
@@ -55,12 +61,8 @@ public:
   _WRAP_METHOD(InputMode get_mode() const, gdk_device_get_mode)
   _WRAP_METHOD(bool get_has_cursor() const, gdk_device_get_has_cursor)
 
-  //TODO: Add suitable accessor for the information in these fields. For now, people must use gobj() and access them directly.
-  //gint num_axes	the length of the axes array.
-  //GdkDeviceAxis *axes	an array of GdkDeviceAxis, describing the axes of this device.
-  //
-  //gint num_keys	the length of the keys array.
-  //GdkDeviceKey *keys	an array of GdkDeviceKey, describing the mapped macro buttons of this device.
+  _WRAP_METHOD(gint get_n_axes() const, gdk_device_get_n_axes)
+ //TODO: A list of GdkAtom, which we should show as strings: _WRAP_METHOD(GList *  gdk_device_list_axes      () const, gdk_device_list_axes)
 };
 
 } // namespace Gdk
