@@ -140,18 +140,6 @@
   )
 )
 
-(define-method ref
-  (of-object "GdkPixbufAnimation")
-  (c-name "gdk_pixbuf_animation_ref")
-  (return-type "GdkPixbufAnimation*")
-)
-
-(define-method unref
-  (of-object "GdkPixbufAnimation")
-  (c-name "gdk_pixbuf_animation_unref")
-  (return-type "none")
-)
-
 (define-method get_width
   (of-object "GdkPixbufAnimation")
   (c-name "gdk_pixbuf_animation_get_width")
@@ -240,18 +228,6 @@
 (define-function gdk_pixbuf_get_type
   (c-name "gdk_pixbuf_get_type")
   (return-type "GType")
-)
-
-(define-method ref
-  (of-object "GdkPixbuf")
-  (c-name "gdk_pixbuf_ref")
-  (return-type "GdkPixbuf*")
-)
-
-(define-method unref
-  (of-object "GdkPixbuf")
-  (c-name "gdk_pixbuf_unref")
-  (return-type "none")
 )
 
 (define-method get_colorspace
