@@ -1,5 +1,16 @@
 2010-08-29  Murray Cumming  <murrayc@murrayc.com>
 
+	gdkmm: Wrapped new Device and Display methods.
+
+	* gdk/src/cursor.hg: Added get_cursor_type().
+	* gdk/src/device.[hg|ccg]: Added get_key(), get_axis_use(), get_n_axes().
+	* gdk/src/filelist.am:
+	* gdk/src/gdk_pixbuf_methods.defs: Regenerated with h2defs.py
+	* tools/m4/convert_gdk.m4: Added DeviceManager conversions.
+	* gtk/src/widget.hg: Added const version of get_accessible().
+
+2010-08-29  Murray Cumming  <murrayc@murrayc.com>
+
 	Regenerated function .defs files.
 
 	* gdk/src/gdk_methods.defs:
